Bug 258284 - opening mails from external apps results in blank mail window
Summary: opening mails from external apps results in blank mail window
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.89
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-29 15:47 UTC by Andreas Kuhl
Modified: 2010-12-12 14:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Kuhl 2010-11-29 15:47:43 UTC
Version:           2.0.89 (using KDE 4.5.80) 
OS:                Linux

Whenever I open an email from an external application (and not from kmail message list), the mail window opens but remains blank. However, the mail subject is displayed in window title.

Reproducible: Didn't try

Steps to Reproduce:
1. Drag a mail from KMail to dolphin and drop it.
2. Click the mail in dolphin

-or-

1. use krunner nepomuk runner to search for a keyword contained in a mail
2. click on a mail search result

-or-

1. Fetch a mail from server with Lion Mail emailnotifier plasma applet
2. click a fetched mail icon to open it

Actual Results:  
Mail window opens but remains blank.

Expected Results:  
Mail window should contain mail header and body.
Comment 1 Andreas Kuhl 2010-11-29 15:49:15 UTC
Forgot to select reproducibility: Always reproducible.
Comment 2 Andreas Kuhl 2010-12-10 14:27:41 UTC
Anyone reading this? Would be great to have this fixed soon during the KDE SC 4.6 RC/Beta run. This is a show stopper for Lion Mail tests, because no mails can be opened from Lion Mail.

The bug however is not within Lion Mail since it uses KLaunch and this worked fine with KMail 1.x but not with KMail 2.x.
Comment 3 Tobias Koenig 2010-12-12 14:38:31 UTC
SVN commit 1205769 by tokoe:

Do not create a fake Akonadi::Item, the message viewer
expects a real one if showMessage(Akonadi::Item) is called.
Use showMessage(KMime::Message::Ptr) instead, this can deal with
plain kmime messages.

BUG: 258284


 M  +2 -5      kmcommands.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1205769