Do not create a fake Akonadi::Item, the message viewer expects a real one if showMessage(Akonadi::Item) is called. Use showMessage(KMime::Message::Ptr) instead, this can deal with plain kmime messages.

BUG: 258284

svn path=/trunk/KDE/kdepim/kmail/; revision=1205769